build/log/idf_py_stderr_output_58089
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'set_time_from_http':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:556:17: error: implicit declaration of function 'esp_http_client_perform_async'; did you mean 'esp_http_client_perform'? [-Wimplicit-function-declaration]
  556 | esp_err_t err = esp_http_client_perform_async(client);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                 esp_http_client_perform
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:556:11: warning: unused variable 'err' [-Wunused-variable]
  556 | esp_err_t err = esp_http_client_perform_async(client);
      |           ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:141: esp-idf/main/CMakeFiles/__idf_main.dir/network/wifi_config.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6398: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
